引入vitamio model ， 增加一些类

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':robotapp', ':commonlibrary', ':clientapp', ':ZBLibrary'
+include ':robotapp', ':commonlibrary', ':clientapp', ':ZBLibrary', ':vitamio'
