--- a/clientapp/build.gradle
+++ b/clientapp/build.gradle
@@ -34,4 +34,6 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation project(':commonlibrary')
     implementation project(':ZBLibrary')
+    implementation files('libs/Java-WebSocket-1.3.5.jar')
+    implementation 'org.greenrobot:eventbus:3.0.0'
 }
