--- a/robotapp/build.gradle
+++ b/robotapp/build.gradle
@@ -27,4 +27,5 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation project(':commonlibrary')
     implementation project(':ZBLibrary')
+    implementation 'cn.yipianfengye.android:zxing-library:2.2'
 }
