为robotapp添加获取mac地址的功能，优化websocket连接

--- a/clientapp/src/main/AndroidManifest.xml
+++ b/clientapp/src/main/AndroidManifest.xml
@@ -3,16 +3,21 @@
     package="com.aiwac.cilentapp.patrobot">
     <!-- 浮动通知权限 -->
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" /> <!-- skin -->
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <!-- skin -->
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" /> <!-- skin -->
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <!-- skin -->
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" /> <!-- 语音识别 -->
+    <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
+    <!-- 语音识别 -->
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
+
+    <uses-permission android:name="android.permission.VIBRATE" />
 
     <application
         android:name=".PatClientApplication"
@@ -22,7 +27,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.loginandregister.LoginByPasswordActivity"></activity>
+        <activity android:name=".activity.setting.SettingActivity"></activity>
+        <activity android:name=".activity.loginandregister.LoginByPasswordActivity" />
         <activity android:name=".activity.loginandregister.RegisterCodeActivity" />
         <activity android:name=".activity.loginandregister.LoginActivity" />
         <activity android:name=".activity.MainActivity">
