--- a/clientapp/build.gradle
+++ b/clientapp/build.gradle
@@ -36,4 +36,5 @@ dependencies {
     implementation project(':ZBLibrary')
     implementation files('libs/Java-WebSocket-1.3.5.jar')
     implementation 'org.greenrobot:eventbus:3.0.0'
+    implementation 'cn.yipianfengye.android:zxing-library:2.2'
 }
