--- a/robotapp/build.gradle
+++ b/robotapp/build.gradle
@@ -30,4 +30,5 @@ dependencies {
     implementation project(':ZBLibrary')
     implementation 'cn.yipianfengye.android:zxing-library:2.2'
     implementation files('libs/Java-WebSocket-1.3.5.jar')
+    implementation project(':vitamio')
 }
