--- a/clientapp/src/main/AndroidManifest.xml
+++ b/clientapp/src/main/AndroidManifest.xml
@@ -15,6 +15,10 @@
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission android:name="android.permission.VIBRATE" />
 
+
+    <uses-permission android:name="android.permission.BLUETOOTH" />
+
+
     <application
         android:name=".PatClientApplication"
         android:allowBackup="true"
@@ -42,11 +46,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".activity.VideoChatViewActivity"></activity>
 
         <service
             android:name=".service.WebSocketService"
             android:enabled="true"
             android:exported="true" />
+
     </application>
 
 </manifest>
