--- a/robotapp/build.gradle
+++ b/robotapp/build.gradle
@@ -16,6 +16,11 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    sourceSets {
+        main {
+            jniLibs.srcDirs = ['/libs']
+        }
+    }
 }
 
 dependencies {
