--- a/robotapp/src/main/AndroidManifest.xml
+++ b/robotapp/src/main/AndroidManifest.xml
@@ -25,7 +25,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.videoplayer.AudioPlayActivity"></activity>
+        <activity android:name=".activity.VideoChatViewActivity"></activity>
+        <activity android:name=".activity.videoplayer.AudioPlayActivity" />
         <activity android:name=".activity.videoplayer.VideoPlayActivity" />
         <activity android:name=".activity.ConnectWifiActivity" />
         <activity android:name=".activity.SettingActivity" />
