--- a/robotapp/build.gradle
+++ b/robotapp/build.gradle
@@ -36,4 +36,5 @@ dependencies {
     implementation 'cn.yipianfengye.android:zxing-library:2.2'
     implementation files('libs/Java-WebSocket-1.3.5.jar')
     implementation project(':vitamio')
+    implementation 'org.greenrobot:eventbus:3.0.0'
 }
