--- a/clientapp/build.gradle
+++ b/clientapp/build.gradle
@@ -46,4 +46,7 @@ dependencies {
     implementation 'cn.yipianfengye.android:zxing-library:2.2'
     implementation project(':vitamio')
     implementation project(path: ':vitamio')
+
+    //方向键
+    implementation 'me.caibou.android:rockerview:1.0.0'
 }
