--- a/clientapp/src/main/AndroidManifest.xml
+++ b/clientapp/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.aiwac.cilentapp.patrobot">
+
     <!-- 浮动通知权限 -->
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" /> <!-- skin -->
@@ -14,10 +15,7 @@
     <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" /> <!-- 语音识别 -->
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission android:name="android.permission.VIBRATE" />
-
-
     <uses-permission android:name="android.permission.BLUETOOTH" />
-
 
     <application
         android:name=".PatClientApplication"
@@ -27,7 +25,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.setting.ChangePasswordActivity"></activity>
+        <service
+            android:name=".sport.MoveControlService"
+            android:enabled="true"
+            android:exported="true"></service>
+
+        <activity android:name=".activity.setting.ChangePasswordActivity" />
         <activity android:name=".activity.setting.PersonalActivity" />
         <activity android:name=".activity.setting.ScanCodeActivity" />
         <activity android:name=".activity.videoplayer.AudioPlayActivity" />
@@ -46,13 +49,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.VideoChatViewActivity"></activity>
+        <activity android:name=".activity.VideoChatViewActivity" />
 
         <service
             android:name=".service.WebSocketService"
             android:enabled="true"
             android:exported="true" />
-
     </application>
 
 </manifest>
