--- a/robotapp/build.gradle
+++ b/robotapp/build.gradle
@@ -37,4 +37,10 @@ dependencies {
     implementation files('libs/Java-WebSocket-1.3.5.jar')
     implementation project(':vitamio')
     implementation 'org.greenrobot:eventbus:3.0.0'
+
+    //升级
+    implementation 'com.qianwen:update-app:3.5.2'
+    implementation 'com.lzy.net:okgo:3.0.4'
+    implementation 'com.qianwen:okhttp-utils:3.8.0'
+
 }
