投食巡航闹钟以及列表更新

--- a/robotapp/src/main/AndroidManifest.xml
+++ b/robotapp/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.aiwac.robotapp.patrobot">
+
     <!-- 浮动通知权限 -->
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" /> <!-- skin -->
@@ -25,7 +26,30 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.update.RobotUpdateActivity"></activity>
+        <receiver
+            android:name=".receiver.navigateEndReceiver"
+            android:enabled="true"
+            android:exported="true"></receiver>
+        <receiver
+            android:name=".receiver.navigateStartReceiver"
+            android:enabled="true"
+            android:exported="true" />
+        <receiver
+            android:name=".receiver.feedEndReceiver"
+            android:enabled="true"
+            android:exported="true" />
+        <receiver
+            android:name=".receiver.feedStartReceiver"
+            android:enabled="true"
+            android:exported="true" />
+
+        <activity android:name=".activity.update.RobotUpdateActivity" />
+
+        <receiver android:name=".receiver.timeReceiver">
+            <intent-filter>
+                <action android:name="MYALARMRECEIVER" />
+            </intent-filter>
+        </receiver>
 
         <service
             android:name=".service.SportService"
