视频通话界面调整，横屏适配，机器人主页标题栏调整

--- a/clientapp/src/main/AndroidManifest.xml
+++ b/clientapp/src/main/AndroidManifest.xml
@@ -59,7 +59,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.VideoChatViewActivity" />
+        <activity android:name=".activity.VideoChatViewActivity"
+            />
 
         <service
             android:name=".service.WebSocketService"
