返回键适配

--- a/clientapp/src/main/AndroidManifest.xml
+++ b/clientapp/src/main/AndroidManifest.xml
@@ -59,7 +59,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.VideoChatViewActivity"
+        <activity android:name=".activity.videochat.VideoChatViewActivity"
             />
 
         <service
